--- a/w01.md
+++ b/w01.md
@@ -4,6 +4,25 @@ permalink: /W01/
 
 [Home](../)
 
-## Week 01
+## Top 10 Lists: Week 01
 
-empty!
+1.	Free Operating System<br>
+Allows user to enjoy four certain freedoms: to freely run the program; to study and change the source code and to give or sell copies either with or without changes. The developer doesn’t address the software to gain income but sometimes include license for no-cost use, redistribution, and modification
+2.	Open-Sourced System<br>
+Almost like Free OS but not that free. Open-sourced software developers offers communities that interested to help develop and maintain the software. It is said that open-sourced software has faster problem solving because a lot of people keep their eye on it.
+3.	[Copyleft](https://www.gnu.org/copyleft/)<br>
+It’s not like when I want to go right but instead ask to turn left, copyleft is a way to give people free access to a software including its modification and expansion. It is actually a copyright but with permission for anyone to do anything.
+4.	[Mass Storage](https://www.techopedia.com/definition/2619/mass-storage)<br>
+Systems that store a large amount of data, nowadays often associated with data backup and recovery. Most storage is hard disks (HDD) and solid-state disks (SSD) while tape containers and floppy disks is some previous storage types.
+5.	User Interface<br>
+A window system with a mouse as a pointing device to make action, such as click, type, hold, swipe, etc. Common interface is Graphical User Interface (GUI).
+6.	[Input/Output (I/O)]( https://study.com/academy/lesson/basic-input-output-in-c-programming.html)<br>
+A type of interaction between user and device. Input means user giving order/entry to device while output means machine responds to user’s order and giving feedback to user.
+7.	Virtualization<br>
+A technology that allows us to “maximize” hardware usage by “divide” a single computer into several environments with same/different systems.
+8.	Cloud Computing<br>
+Using network instead of hardware/disk for everyday activities (delivers computing, storage, and applications). Sort kind of virtualization as it uses virtualization as a base for functionality.
+9.	Virtual Memory<br>
+Execution of a process without using actual physical memory. It abstracts physical memory into a large, uniform array of storage, and separate logical from physical memory.
+10.	Loadable Kernel Modules<br>
+Modules that linked to kernel to provide extra service to help the kernel running core service.
