--- a/w08.md
+++ b/w08.md
@@ -1,50 +1,55 @@
 ---
-permalink: /W07/
+permalink: /W08/
 ---
 
 [Home](../)
 
-## Top 10 Lists: Week 07<br>
+## Top 10 Lists: Week 08<br>
 
-1. [Process Synchronization](https://www.studytonight.com/operating-system/process-synchronization)<br>
-While Cambridge describe synchronization as "the act of making things happen at the same time", Process Synchronization is sharing resources by process 
-in a way that concurrent access to data is handled to minimize the chance of inconsistent data. 
+1. [Scheduling](https://www.guru99.com/cpu-scheduling-algorithms.html)<br>
+CPU Scheduling is a process which CPU will decide a process to run while the other processes on hold, and when the CPU is at idle, it will pick
+another process to run that was on hold. There are two kinds of CPU scheduling around. The scheduling is trying to reach maximum utilization and 
+throughput while minimizing turnaround and response time.
 
-2. [Critical Section](https://www.studytonight.com/operating-system/process-synchronization)<br>
-In a code, there are 3 types of section. `Entry section` and `Exit section` are two of important sections, but the most important is `Critical section`
-which should be executed as an atomic action while having a shared variables. This means a process can only execute the code section once at a time.
+2. [Preemptive Scheduling](https://www.guru99.com/cpu-scheduling-algorithms.html)<br>
+This kind of scheduling will run a process with higher priorities than the other, even if there are a task in the run. The lower priority task 
+holds for some time and resumes when the higher priority task finishes its execution. The scheduling is preentive if a specific process switches 
+from the running state or waiting state to the ready state
 
-3. [Deadlock](https://www.guru99.com/deadlock-in-operating-system.html)<br>
-<img src="https://pbs.twimg.com/media/DROeSVjUIAA700b?format=jpg&name=medium" height="250"><br>
-A condition when a process is on hold because a in-line process is holding the resources. The picture above probably resembles a deadlock in an intersection, 
-when the three-wheelers want to go to the left but blocked by the cars that want to go up but blocked by cars and three-wheelers that want to go right but
-blocked by a car. In computer, deadlock is common to a multiprocessing.
+3. [Non-Preemptive Scheduling](https://www.guru99.com/cpu-scheduling-algorithms.html)<br>
+In this kind of scheduling, the CPU is already allocate their room for process. If a process keeps the CPU busy, it will decide to finish the process
+by either switching it or terminate it. The scheduling is non-preentive if a process switches from the running to the waiting state and process finished 
+its execution and terminated. 
 
-4. [Circular Wait](https://www.guru99.com/deadlock-in-operating-system.html)<br>
-A condition when a process is waiting for a second process which is waiting for a third process ...(keep looping)... and the n-th process is waiting for the
-first process is executed.
+4. [Burst time](https://www.guru99.com/cpu-scheduling-algorithms.html)<br>
+Also knwon as running time or execution time. This is a method of the CPU to call how long the process will lasts.
 
-5. [Mutex Lock](https://www.geeksforgeeks.org/mutual-exclusion-in-synchronization/)<br>
-Mutex (Mutual Exclusion) is one of requirement that a solution has to have. Itis a property of process sync which prohibit two or more processes exist in 
-a critical section, which explain only one of 'em can do it.
+5. [Multiprocessor Scheduling](https://www.includehelp.com/operating-systems/multiprocessor-scheduling-in-operating-system.aspx)<br>
+In the multiprocessor scheduling, there are multiple CPU’s which share the load so that various process run simultaneously. In general, the multiprocessor 
+scheduling is complex as compared to single processor scheduling. In the multiprocessor scheduling, there are many processors and they are identical and we 
+can run any process at any time.
 
-6. [Semaphore](https://www.tutorialspoint.com/semaphores-in-operating-system)<br>
-Semaphores are integer variables that are used to solve the critical section problem by using two atomic operations from Process Synchronization, wait and signal.
-Wait means no operation is executed, symbolized with `--`, while Signal symbolized with `++`. There are two types of semaphore: counting and binary.
+6. [Thread Scheduling](http://www.qnx.com/developers/docs/qnxcar2/index.jsp?topic=%2Fcom.qnx.doc.neutrino.sys_arch%2Ftopic%2Fkernel_SCHEDULING.html)<br>
+The execution of a running thread is temporarily suspended whenever the microkernel is entered as the result of a kernel call, exception, or hardware interrupt. 
+A scheduling decision is made whenever the execution state of any thread changes—it doesn't matter which processes the threads might reside within. 
+Threads are scheduled globally across all processes.
 
-7. [Bounded Waiting](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
-Bounded Waiting is one of requirement that a solution has to have. It stated that "A bound must exist on the number of times that other processes are allowed to enter their critical sections after a process has made a request to enter its 
-critical section and before that request is granted."
+7. [Non-uniform Memory Access](https://queue.acm.org/detail.cfm?id=2513149)<br>
+NUMA (non-uniform memory access) is the phenomenon that memory at various points in the address space of a processor have different performance characteristics. 
+At current processor speeds, the signal path length from the processor to memory plays a significant role. Increased signal path length not only increases latency 
+to memory but also quickly becomes a throughput bottleneck if the signal path is shared by multiple processors.
 
-8. [Race Condition](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
-Race Condition may occur while a critical section is executed. This condition will happens if multiple thread execution's result differs according to the executing order.
-This condition may be avoided if the critical section is treated as an atomic instruction, or proper thread synchronization using either locks or atomic variable.
+8. [Asymmetric Multiprocessing](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
+Asymmetric Multiprocessing system is a multiprocessor computer system where not all of the multiple interconnected central processing units (CPUs) 
+are treated equally. In asymmetric multiprocessing, only a master processor runs the tasks of the operating system.  For example, AMP can be used in 
+assigning specific tasks to CPU based on priority and importance of task completion. 
 
+9. [Symmetric Multiprocessing](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
+It involves a multiprocessor computer hardware and software architecture where two or more identical processors are connected to a single, shared 
+main memory, have full access to all input and output devices, In other words, Symmetric Multiprocessing is a type of multiprocessing where each 
+processor is self-scheduling.  For example, SMP applies multiple processors to that one problem, known as parallel programming. 
 
-9. [Progress](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
-Progress is one of requirement that a solution has to have. It stated that 'If no process is executing in the critical section and other processes are waiting outside the 
-critical section, then only those processes that are not executing in their remainder section can participate in deciding which will enter in the critical section next, and 
-the selection can not be postponed indefinitely."
-
-10. [Peterson's Solution](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
-Peterson's solution offers solution for two processes critical solution. It uses Mutex, Bounded Waiting, and Progress.
+10. [Time Complexity Analysis (Big O)](https://www.geeksforgeeks.org/introduction-of-process-synchronization/)<br>
+Time complexity of an algorithm signifies the total time required by the program to run till its completion. The time complexity of algorithms is 
+most commonly expressed using the big O notation. It's an asymptotic notation to represent the time complexity. Besides big O, there are other notation such as
+big omega, big theta, little O, and little omega.
